# neurorpg

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENCE  README.md
res/models/: README.md
scripts/: DownloadModel.py
src/client/: Main.cpp
src/server/: Main.cpp  Server.cpp  Server.h
src/shared/: Asserts.h  ConcurrentQueue.h  Logging.cpp  Logging.h  Precompiled.h  Utils.cpp  WorkerPool.cpp  WorkerPool.h
tests/: Main.cpp  TestConcurrentQueue.cpp  TestWorkerPool.cpp
